# python-STRAIGHT-pitch

./: .gitignore  .gitmodules  kawahara1999.md  pyproject.toml  requirements.txt
doc/: F0 Tracking.ipynb  Initial F0 Estimation.ipynb  Signal Power.ipynb
src/straight_pitch/: __init__.py  f0track5.py  fixpF0VexMltpBG4.py  fixpF0VexMltpBG41.py  multanalytFineCSPB.py  multanalytFineCSPB1.py  refineF06.py  straight_pitch.py  utils.py
test/: test_eq10.ipynb  test_f0.py  test_fixpF0VexMltpBG4.py  test_straight.py
